[gd_scene format=4 uid="uid://dlf5gt3bmm87q"]

[ext_resource type="Script" uid="uid://be5paiyhv4161" path="res://addons/assets/scripts/pc.gd" id="1_s73fq"]
[ext_resource type="Texture2D" uid="uid://xvpf0d5qqtn" path="res://Models/oldPCTexture.png" id="1_udmw2"]
[ext_resource type="Texture2D" uid="uid://b2d4jm8yvopp5" path="res://Models/MOUSE_1.png" id="2_qq25d"]
[ext_resource type="PackedScene" uid="uid://bpqac53a6s8bc" path="res://Scene/objects Scenes/pc_control.tscn" id="3_nm7iu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_egddg"]

[sub_resource type="ArrayMesh" id="ArrayMesh_718cp"]
_surfaces = [{
"aabb": AABB(-1.0622486, -1.0719362, -1.3783859, 2.1243055, 2.1332169, 2.6764827),
"format": 34359742465,
"index_count": 132,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAwACAAQAAwAFAAAAAAAFAAEABAAGAAMAAwAGAAUAAgAHAAQAAgABAAcABAAHAAYABQAIAAEAAQAJAAcAAQAIAAkACgAGAAcACgAHAAkABgALAAUABgAKAAsABQALAAgADAAKAAkADQALAAoADQAKAAwADgAIAAsADgALAA0ADwAJAAgADwAIAA4ADAAJAA8AEAAOAA0AEQANAAwAEAANABEAEgAMAA8AEQAMABIAEwAPAA4AEwAOABAAEgAPABMAEQAUABAAEwAVABIAEgAWABEAEQAWABQAEgAVABYAEAAUABcAEAAXABMAFgAXABQAEwAXABUAFgAVABcA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("aOd/PzQ3gb+QYja/SeqHP5Eyhj/zbrC/Gv9/P+XCfD8JKKa/PwyAv8Qigb8c4TK/ZQCAv8PrfD9QZ6S/td2HPzU1ib91qkG/w/eHv4Ifib9+8T2/LuuHv0NIhj94kq6/e/GHP1nChz9IeXy+/OOHvwzYhz9wlW2+kfCHv7mPh78snMc+5+SHP2ylh79AKsA+Gv9/v+PCfL8JKKY/ZQCAP8LrfL9QZ6Q/PwyAP8UigT8c4TI/aOd/vzU3gT+OYjY/KHdmP7ZkaT+KWh4/vGFmP+OgZL8a7pI/i2Bmvxt8ZL/qgZQ/IEtmv3+JaT8rgiE/o3VmPzwQaT9Je/8+EGJmv5XQZL94M4U/N2BmP131ZL+on4M/pUxmvwU1aT9G5QI/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ih8em"]
resource_name = "Factorry_Cube_003"
_surfaces = [{
"aabb": AABB(-1.0622486, -1.0719362, -1.3783859, 2.1243055, 2.1332169, 2.6764827),
"attribute_data": PackedByteArray("AADAPgAAAD8AACA/AAAAPwAAID8AAAA/AADAPgAAAD8AAMA+AABAPwAAID8AAAA/AAAgPwAAQD8AAMA+AAAAPwAAwD4AAIA++EK4PgAAALUAAMA+AAAAAKxOvj4sha4+8ifGPoD2TDzyJ8Y+lDBzPvInxj6UMHM+8yfGPkD2TDwAAMA+AAAAAPz/Hz+AtA+9AAAgPwAAAAD4Qrg+AAAAtQAAID8AAEA/AADAPgAAQD8AAMA+AABAPwAAID8AAEA/8ifGPoD2TDwAACA/AAAAAAbsHD+A9kw8AADAPgAAAAAG7Bw/lDBzPgAAwD4AAIA+8ifGPpQwcz4AACA/AACAPvInxj6UMHM+AADAPgAAAADyJ8Y+gPZMPAAAwD4AAIA+BuwcP4D2TDwAACA/AACAPgbsHD+UMHM+AAAgPwAAAADyJ8Y+lDBzPgfsHD+A9kw8BuwcP5gwcz7zJ8Y+QPZMPAbsHD+A9kw88yfGPkD2TDzyJ8Y+gPZMPAfsHD+A9kw8BuwcP5Qwcz4H7Bw/gPZMPAbsHD+A9kw8BuwcP5gwcz7yJ8Y+lDBzPgbsHD+YMHM+BuwcP5Qwcz7yJ8Y+lDBzPgAAwD6qKWI/AAAgPwAAQD8AACA/qyliPwAAwD4AAEA/AADAPgAAAD8CACA/gC2zPgAAID8AAAA/rE6+PiyFrj4AAAA+AAAAP6xOvj4sha4+AADAPgAAAD8AAAA+qqy7PgAAID8AAAA/AABgP6ysuz4AAGA/AAAAPwIAID+ALbM+AADAPgAAQD8AAMA+AAAAPwAAwD4AAAA/AADAPgAAQD8AACA/AAAAAAIAID+ALbM+AAAgPwAAgD78/x8/gLQPvQAAID8AAIA+rE6+PiyFrj4AAMA+AACAPgIAID+ALbM+AAAgPwAAAD8AACA/AABAPwAAID8AAEA/AAAgPwAAAD8="),
"format": 34359742487,
"index_count": 132,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUAGAAZABoAGAAbABkAHAAdAB4AHAAfAB0AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AQABBAEIAQABDAEEARABFAEYARABHAEUASABJAEoASABLAEkATABNAE4ATABPAE0AUABRAFIAUABTAFEAVABVAFYAVABXAFUA"),
"material": SubResource("StandardMaterial3D_egddg"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 88,
"vertex_data": PackedByteArray("aOd/PzQ3gb+QYja/SeqHP5Eyhj/zbrC/Gv9/P+XCfD8JKKa/td2HPzU1ib91qkG/PwyAv8Qigb8c4TK/Gv9/P+XCfD8JKKa/ZQCAv8PrfD9QZ6S/aOd/PzQ3gb+QYja/ZQCAP8LrfL9QZ6Q/kfCHv7mPh78snMc+Gv9/v+PCfL8JKKY/5+SHP2ylh79AKsA+i2Bmvxt8ZL/qgZQ/N2BmP131ZL+on4M/vGFmP+OgZL8a7pI/EGJmv5XQZL94M4U/Gv9/v+PCfL8JKKY//OOHvwzYhz9wlW2+aOd/vzU3gT+OYjY/kfCHv7mPh78snMc+ZQCAv8PrfD9QZ6S/w/eHv4Ifib9+8T2/PwyAv8Qigb8c4TK/LuuHv0NIhj94kq6/i2Bmvxt8ZL/qgZQ/aOd/vzU3gT+OYjY/IEtmv3+JaT8rgiE/Gv9/v+PCfL8JKKY/KHdmP7ZkaT+KWh4/ZQCAP8LrfL9QZ6Q/vGFmP+OgZL8a7pI/PwyAP8UigT8c4TI/vGFmP+OgZL8a7pI/Gv9/v+PCfL8JKKY/i2Bmvxt8ZL/qgZQ/ZQCAP8LrfL9QZ6Q/IEtmv3+JaT8rgiE/PwyAP8UigT8c4TI/KHdmP7ZkaT+KWh4/aOd/vzU3gT+OYjY/N2BmP131ZL+on4M/pUxmvwU1aT9G5QI/o3VmPzwQaT9Je/8+EGJmv5XQZL94M4U/IEtmv3+JaT8rgiE/EGJmv5XQZL94M4U/i2Bmvxt8ZL/qgZQ/pUxmvwU1aT9G5QI/KHdmP7ZkaT+KWh4/pUxmvwU1aT9G5QI/IEtmv3+JaT8rgiE/o3VmPzwQaT9Je/8+vGFmP+OgZL8a7pI/o3VmPzwQaT9Je/8+KHdmP7ZkaT+KWh4/N2BmP131ZL+on4M/kfCHv7mPh78snMc+LuuHv0NIhj94kq6//OOHvwzYhz9wlW2+w/eHv4Ifib9+8T2/td2HPzU1ib91qkG/e/GHP1nChz9IeXy+SeqHP5Eyhj/zbrC/5+SHP2ylh79AKsA+w/eHv4Ifib9+8T2/5+SHP2ylh79AKsA+td2HPzU1ib91qkG/kfCHv7mPh78snMc+SeqHP5Eyhj/zbrC//OOHvwzYhz9wlW2+LuuHv0NIhj94kq6/e/GHP1nChz9IeXy+PwyAv8Qigb8c4TK/td2HPzU1ib91qkG/aOd/PzQ3gb+QYja/w/eHv4Ifib9+8T2/aOd/vzU3gT+OYjY/e/GHP1nChz9IeXy+PwyAP8UigT8c4TI//OOHvwzYhz9wlW2+PwyAP8UigT8c4TI/5+SHP2ylh79AKsA+ZQCAP8LrfL9QZ6Q/e/GHP1nChz9IeXy+Gv9/P+XCfD8JKKa/LuuHv0NIhj94kq6/ZQCAv8PrfD9QZ6S/SeqHP5Eyhj/zbrC/TBAXOP///79MEBc4////v0wQFzj///+/TBAXOP///7/eHK8ACZ38/94crwAJnfz/3hyvAAmd/P/eHK8ACZ38/wWAYwnlo17DBYBjCT6T+sMFgGMJnodmxAWAYwmWqxbDZIH4/14BAoBkgfj/XgECgGSB+P////+/ZIH4/14BAoAwClOCTIZi0zAKU4Ieg3f3MApTggmd/P8wClOCnodnxJTvojf///+/lO+iN////7+U76I3////v5Tvojf///+/1bqrjwqd/P/VuquPCp38/9W6q48Knfz/1bqrjwqd/P+WRcmPCZ38/5ZFyY8Jnfz/lkXJjwmd/P+WRcmPCZ38/2KAcctSNP7/YoBxy1I0/v9igHHLUjT+/2KAcctSNP7/dYAVRgaA7eJ1gBVGBoDt4nWAFUYGgO3idYAVRgaA7eKvgN2cCZ38/6+A3ZwJnfz/r4DdnAmd/P+vgN2cCZ38//j/8n/QAgMA+P/yf7+fAQD4//J/CZ0BAPj/8n9dAfx/+X9kAV4B/H/5f2QBXgH8f/l/ZAFeAfx/+X9kAV4B/H8NAAaACZ0BAA0ABoAJnQEADQAGgAmdAQANAAaA////Pw0ABoAJnf3/DQAGgAmd/f8NAAaACZ39/w0ABoAJnf3/+P/yf1Kb/f/4//J/Xpz9//j/8n8Jnf3/+P/yf6Oa/f/5f2QB3/9Xu/l/ZAHr/5O9+X9kAfb/i7/5f2QB1v+cuWSB+P/fBQrAZIH4/zQDBsBkgfj/5wADwGSB+P8BCA3AdzSA/////793NID/////v3c0gP////+/dzSA/////78VgET5F3HuQhWARPkXce5CFYBE+dkDseQVgET5F3HuQun1RII9Zeb/6fVEgrRj+P/p9USCCp38/+n1RILuZd7/TEhmAP///79MSGYA////v0xIZgD///+/TEhmAP///78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_718cp")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_52hwo"]
albedo_texture = ExtResource("2_qq25d")
emission_enabled = true
emission_texture = ExtResource("2_qq25d")

[sub_resource type="QuadMesh" id="QuadMesh_nm7iu"]
material = SubResource("StandardMaterial3D_52hwo")

[sub_resource type="BoxShape3D" id="BoxShape3D_qq25d"]
size = Vector3(2.092041, 2.1348724, 2.1763306)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aefqf"]
albedo_texture = ExtResource("1_udmw2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pop2i"]
resource_name = "Material.001"
cull_mode = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_sirw5"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD//5ePAAAAAP//AAD//wAA//+Xj///AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_a6ywv"]
resource_name = "Factorry_Cube_004"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("wyeSU9QHcUTvJ9hC6wdTU2o58zwcPdZIvDn+Ntg8DU34N4E2QRQ8MOc3BzQuFDMzCS44T6A2BT3NLXZL2zZ0QjQz+TSAC2InHjTiJ4oMbDT7/Jj4B3KvtRb9+7dMcnD3"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_pop2i"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//A8AAAP//AAADwAAA/////xbAAAAAAAAA/78AAAAAAAAAAP//l48AAAAAAAD//wAAAAD//wAAAAAAAP//AAAAAErE//+Xj///psP//5ePAADsxP//AAD//xnD//8AAP//DC0AAP/////2Lf//l4///30qAAAAAP//my8AAAAAAABl1P//AAD//2XU//8AAAAAcdQAAAAA//9Z1P//l48AAO3MAAD/////88wAAP//AAAizf//l4///77MkX0j+5F9I/ttetv0DoL3/sHMPbMyzcyyEMztszDOzrHvSwcaqE6rGIdJOxtTUVYX/3//f/9//3//f/9//3//fy9U51UvVOdVPlTgVSBU71UzyFAjMchHIxjI+iJMyJ4j")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_sirw5")

[sub_resource type="BoxShape3D" id="BoxShape3D_52hwo"]
size = Vector3(0.829834, 0.051513672, 0.31323242)

[sub_resource type="BoxShape3D" id="BoxShape3D_udmw2"]
size = Vector3(1, 0.6876221, 1.1899414)

[node name="PC" type="StaticBody3D" unique_id=150785961]
script = ExtResource("1_s73fq")

[node name="Montor" type="MeshInstance3D" parent="." unique_id=505390548]
transform = Transform3D(0.39253086, 0, 0, 0, -0.26418418, 0.041744262, 0, -0.21774493, -0.050647218, 0, 0.40085322, 0.20186335)
mesh = SubResource("ArrayMesh_ih8em")
skeleton = NodePath("")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Montor" unique_id=1309921041]
transform = Transform3D(1.898688, 0, 0, 0, 1.8339927, 0.4914166, 0, -0.4914174, 1.833992, 0, -0.00544703, 0.87476707)
mesh = SubResource("QuadMesh_nm7iu")

[node name="DisplayCol" type="CollisionShape3D" parent="." unique_id=1512974408]
transform = Transform3D(0.39253086, 0, 0, 0, -0.2791005, 0.03800975, 0, -0.19826509, -0.053506847, 0.00062291324, 0.3986335, 0.20252492)
shape = SubResource("BoxShape3D_qq25d")

[node name="Keyboard" type="MeshInstance3D" parent="." unique_id=276557146]
transform = Transform3D(-1.8819396e-08, 0, 0.41365469, 0, 0.02582916, 0, -0.1578685, 0, -4.9311485e-08, 0, 0.06342393, -0.16514987)
material_override = SubResource("StandardMaterial3D_aefqf")
mesh = SubResource("ArrayMesh_a6ywv")
skeleton = NodePath("")

[node name="KeyboardCol" type="CollisionShape3D" parent="." unique_id=602541789]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0013427734, 0.06213379, -0.16589355)
shape = SubResource("BoxShape3D_52hwo")

[node name="SubViewport" type="SubViewport" parent="." unique_id=526181]

[node name="PC_Control" parent="SubViewport" unique_id=570319542 instance=ExtResource("3_nm7iu")]

[node name="PC_Camera" type="Camera3D" parent="." unique_id=1207579968]
transform = Transform3D(-1, -2.370181e-08, 1.15669486e-07, 5.6194278e-08, 0.76604444, 0.6427877, -1.0384319e-07, 0.6427877, -0.76604444, 0, 0.72342414, -0.18762271)
projection = 1
current = true
size = 0.77317244
far = 1.0

[node name="PCArea" type="Area3D" parent="." unique_id=1986511893]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PCArea" unique_id=2034452686]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.38382787, -0.0949707)
shape = SubResource("BoxShape3D_udmw2")

[connection signal="body_entered" from="PCArea" to="." method="_on_pc_area_body_entered"]
[connection signal="body_exited" from="PCArea" to="." method="_on_pc_area_body_exited"]
